Bug 79838 - DOCX : CRASH : LO crashes while opening the document
Summary: DOCX : CRASH : LO crashes while opening the document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: pallavi.jadhav
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-09 14:26 UTC by pallavi.jadhav
Modified: 2015-02-27 16:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
File crashes on Ubuntu master 4.4.0.0.alpha0+ and gets saved on Windows TinderBox: Win-x86@42, Branch:master, Time: 2014-06-04_20:50:46 (259.50 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-09 14:26 UTC, pallavi.jadhav
Details
bt console (13.82 KB, text/plain)
2014-06-09 18:07 UTC, Julien Nabet
Details
Contains a table having CheckBox Form field (30.75 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-26 13:35 UTC, pallavi.jadhav
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pallavi.jadhav 2014-06-09 14:26:04 UTC
Created attachment 100747 [details]
File crashes on Ubuntu master  4.4.0.0.alpha0+ and gets saved on Windows TinderBox: Win-x86@42, Branch:master, Time: 2014-06-04_20:50:46

Steps to reproduce :
1] Open attached document in LO
2] Perform save_as to DOCX

Current behavior :
File crashes on save.

Expected behavior :
File should get saved in LO
Comment 1 Jorendc 2014-06-09 14:41:46 UTC
repro, Version: 4.4.0.0.alpha0+
Build ID: b447687292334687a371b66d7ad56ba9662b898e
TinderBox: Win-x86@39, Branch:master, Time: 2014-06-03_06:24:04

Kind regards,
Joren
Comment 2 Julien Nabet 2014-06-09 18:05:29 UTC
On pc Debian x86-64 with master sources updated today, here are some console on loading:
warn:legacy.osl:28502:1:oox/source/docprop/docprophandler.cxx:323: For now unexpected tags are ignored!
warn:oox:28502:1:oox/source/vml/vmltextboxcontext.cxx:221: unhandled style property: mso-next-textbox
warn:legacy.osl:28502:1:svx/source/unodraw/shapepropertynotifier.cxx:136: PropertyChangeNotifier::notifyPropertyChange: no factory!
warn:legacy.osl:28502:1:oox/source/vml/vmlshapecontainer.cxx:47: lclMapShapesById - shape identifier already used 
arn:oox:28502:1:oox/source/drawingml/shapecontext.cxx:128: ShapeContext::onCreateContext: unhandled element: 478
warn:legacy.osl:28502:1:oox/source/helper/storagebase.cxx:72: StorageBase::StorageBase - missing base input stream
Comment 3 Julien Nabet 2014-06-09 18:07:14 UTC
Created attachment 100761 [details]
bt console

Here are the console logs + bt with symbols when saving.
Comment 4 pallavi.jadhav 2014-06-26 13:30:51 UTC
Changing the title of the bug as the attached file is working on latest master.
I will also attach new file which crashes on open.
Comment 5 pallavi.jadhav 2014-06-26 13:35:16 UTC
Created attachment 101802 [details]
Contains a table having CheckBox Form field
Comment 6 pallavi.jadhav 2014-06-26 14:22:15 UTC
Please ingore the previous "Steps to reproduce" as I have attached a new file.
The new file crashes on open.

Steps to Reproduce :
1] Open attached file in LO-4.4

Current behavior :
File crashes on save

Expected behavior :
File should get open successfully.
Comment 7 Commit Notification 2014-07-02 21:52:25 UTC
Pallavi Jadhav committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0459e43ae63191ce9846bbcc7fe797fd949e3878

fdo#79838 : DOCX : File crashes on open



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Timur 2015-02-27 16:38:14 UTC
(In reply to pallavi.jadhav from comment #0)
> File crashes on Ubuntu master  4.4.0.0.alpha0+ and gets saved on Windows
Then I mark as "Linux".