fdo#79838 : DOCX : File crashes on open

Issue :
	DOCX containing nested form fields FORMCHECKBOX inside
	FORMTEXT crashes at open.

	Implementation :
	- Handled case for FORMTEXT.
	- Added issue file isnide sw/qa/core/data/ooxml/pass/

NOTE : This is a due to regression. Issue file opened
       successfully on LO-3.5 and LO-4.1.
       Code changes that caused regression is : https://gerrit.libreoffice.org/gitweb?p=core.git;a=commitdiff;h=a52ee51269a47e52d68405caf8507e1abaa6fd8f

Change-Id: I59dbe7bb2d58c1bcb0ddd144cf7891cbec5cdb24